--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,26 @@ services:
   test-db:
     image: postgres
     ports:
-      - "54320:5432"
+      - 54320:5432
+    restart: always
+    volumes:
+      - ./postgres_db_data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} 
-      POSTGRES_DB: test-db
-    # volumes:
-    #   - ./temp-db/items-db-data/:/var/lib/postgresql/data/
+      POSTGRES_DB: test-db      
     # healthcheck:
     #   test: ["CMD-SHELL", "pg_isready -U testuser -d itemsdb" ]
     #   interval: 10s
     #   timeout: 45s
     #   retries: 10
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_ADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_ADMIN_PASSWORD}
+    ports:
+      - 5050:80
+    depends_on:
+      - test-db
